[package]
name = "zerotier-central-api"
version = "1.1.0"
edition = "2021"
description = "ZeroTier Central API for Rust"
authors = ["Erik Hollensbe <erik.hollensbe@zerotier.com>", "Adam Ierymenko <adam.ierymenko@zerotier.com>"]
license = "BSD-3-Clause"

[dependencies]
progenitor-client = { git = "https://github.com/erikh/progenitor", branch = "fix-reqwest-features" }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = [ "derive" ] }
chrono = { version = "0.4", features = [ "serde" ] }
uuid = { version = "0.8", features = [ "serde", "v4" ] }
futures = "0.3"
serde_json = "1.0"

[build-dependencies]
anyhow = ">=0"
progenitor = { git = "https://github.com/erikh/progenitor", branch = "fix-reqwest-features" }
serde_json = "1.0"
