[package]
name = "zerotier-central-api"
version = "1.2.1"
edition = "2021"
description = "ZeroTier Central API for Rust"
authors = ["Erik Hollensbe <erik.hollensbe@zerotier.com>", "Adam Ierymenko <adam.ierymenko@zerotier.com>"]
license = "BSD-3-Clause"


[dependencies]
progenitor-client = "0.8.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = [ "derive" ] }
chrono = { version = "0.4", features = [ "serde" ] }
uuid = { version = "1.7", features = [ "serde", "v4" ] }
futures = "0.3"
serde_json = "1.0"
regress = "0.4.1"

[build-dependencies]
prettyplease = "0.2"
progenitor = "0.8.0"
serde_json = "1.0"
syn = "2.0"
