[package]
name = "zerotier-one-api"
version = "1.2.2"
edition = "2021"
description = "OpenAPI bindings to the ZeroTierOne JSON API"
authors = [
  "Erik Hollensbe <erik.hollensbe@zerotier.com>",
  "Adam Ierymenko <adam.ierymenko@zerotier.com>",
  "Lennon Day-Reynolds <lennon@zerotier.com>"
]
license = "BSD-3-Clause"

[dependencies]
progenitor-client = "0.12"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0", features = [ "derive" ] }
chrono = { version = "0.4", features = [ "serde" ] }
uuid = { version = "1.21", features = [ "serde", "v4" ] }
futures = "0.3"
serde_json = "1.0"
regress = "0.10"

[build-dependencies]
prettyplease = "0.2"
progenitor = "0.8.0"
serde_json = "1.0"
syn = "2.0"
